# norrona-alert

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: config.py  main.py
backend/src/api/: auth.py  database.py  routes.py
backend/src/contracts/: interfaces.py  models.py
backend/src/differ/: differ.py
backend/src/matcher/: matcher.py
backend/src/notifier/: __init__.py  apns_notifier.py  email_notifier.py  registry.py  web_push_notifier.py
backend/src/products/: repository.py
backend/src/scheduler/: scheduler.py
backend/src/scraper/: __init__.py  scraper.py
backend/src/users/: repository.py
backend/tests/api/: test_api.py
backend/tests/differ/: test_differ.py
backend/tests/matcher/: test_matcher.py
backend/tests/notifier/: test_notifier.py
backend/tests/scraper/: test_scraper.py
backend/tests/scraper/fixtures/: outlet_empty.html  outlet_en_gb.html  outlet_nb_no.html  outlet_partial.html
frontend/: Dockerfile  capacitor.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/verify/: page.tsx
frontend/src/components/: dashboard.tsx  login-page.tsx  preferences-panel.tsx  product-card.tsx
frontend/src/lib/: api.ts  notifications.ts  platform.ts  utils.ts
